crates/au-cli/tests/it/snapshots/it__scenarios__refinement-unsatisfiable.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "refinement-unsatisfiable",
      "message": "field 'port' declares a value refinement 'Number{>=5 & <=1}' that admits no value",
      "severity": "warning",
      "span": {
        "file": "<root>/scenarios/refinement-unsatisfiable/type/config.type.yaml",
        "line_col": {
          "end": {
            "col": 28,
            "line": 2
          },
          "start": {
            "col": 9,
            "line": 2
          }
        },
        "range": {
          "end": 35,
          "start": 16
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 1,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 30,
                        "line_col": {
                          "end": {
                            "col": 31,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/refinement-unsatisfiable/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "refinement-unsatisfiable"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "refinement-unsatisfiable"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/refinement-unsatisfiable/.arsumbris/repo.yaml",
        "section_presence": null
      }
    ]
  }
}
