crates/au-cli/tests/it/snapshots/it__scenarios__repo-readme-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 23,
                        "line_col": {
                          "end": {
                            "col": 24,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/repo-readme-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "repo-readme-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "repo-readme-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/repo-readme-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 142,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 126
            },
            "text": "Repo Overview"
          },
          {
            "kind": "heading",
            "level": 2,
            "span": {
              "end": 159,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 143
            },
            "text": "What this is"
          },
          {
            "kind": "heading",
            "level": 2,
            "span": {
              "end": 238,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 13
                },
                "start": {
                  "col": 1,
                  "line": 12
                }
              },
              "start": 219
            },
            "text": "How to use this"
          },
          {
            "kind": "heading",
            "level": 2,
            "span": {
              "end": 290,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 17
                },
                "start": {
                  "col": 1,
                  "line": 16
                }
              },
              "start": 268
            },
            "text": "How to extend this"
          }
        ],
        "claim": [
          "au.engine.readme::au-engine"
        ],
        "closure": [
          "au.engine.readme::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "tldr",
            "origins": [
              {
                "name": "au.engine.readme",
                "origin_path": "<au-engine-builtin>/au.engine.readme.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 120,
                        "line_col": {
                          "end": {
                            "col": 83,
                            "line": 3
                          },
                          "start": {
                            "col": 7,
                            "line": 3
                          }
                        },
                        "start": 44
                      },
                      "file": "<root>/scenarios/repo-readme-clean/README.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "A demo repo. Read its sections in order. Fork it and add your own type-defs."
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "A demo repo. Read its sections in order. Fork it and add your own type-defs."
                }
              }
            ],
            "field": "tldr"
          }
        ],
        "file": "<root>/scenarios/repo-readme-clean/README.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Repo Overview",
            "optional": false,
            "path": [
              "Repo Overview"
            ],
            "present": true,
            "span": {
              "end": 142,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 126
            }
          },
          {
            "depth": 2,
            "name": "What this is",
            "optional": false,
            "path": [
              "Repo Overview",
              "What this is"
            ],
            "present": true,
            "span": {
              "end": 159,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 143
            }
          },
          {
            "depth": 2,
            "name": "How to use this",
            "optional": false,
            "path": [
              "Repo Overview",
              "How to use this"
            ],
            "present": true,
            "span": {
              "end": 238,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 13
                },
                "start": {
                  "col": 1,
                  "line": 12
                }
              },
              "start": 219
            }
          },
          {
            "depth": 2,
            "name": "How to extend this",
            "optional": false,
            "path": [
              "Repo Overview",
              "How to extend this"
            ],
            "present": true,
            "span": {
              "end": 290,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 17
                },
                "start": {
                  "col": 1,
                  "line": 16
                }
              },
              "start": 268
            }
          }
        ]
      }
    ]
  }
}
