crates/au-cli/tests/it/snapshots/it__scenarios__repo-readme-section-missing.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "body-section-missing",
      "message": "required body section '## How to extend this' is missing from the instance",
      "related": [
        {
          "file": "<au-engine-builtin>/au.engine.readme.type.yaml",
          "range": {
            "end": 902,
            "start": 884
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/repo-readme-section-missing/README.md",
        "line_col": {
          "end": {
            "col": 1,
            "line": 4
          },
          "start": {
            "col": 1,
            "line": 2
          }
        },
        "range": {
          "end": 119,
          "start": 4
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 33,
                        "line_col": {
                          "end": {
                            "col": 34,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/repo-readme-section-missing/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "repo-readme-section-missing"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "repo-readme-section-missing"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/repo-readme-section-missing/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 140,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 124
            },
            "text": "Repo Overview"
          },
          {
            "kind": "heading",
            "level": 2,
            "span": {
              "end": 157,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 141
            },
            "text": "What this is"
          },
          {
            "kind": "heading",
            "level": 2,
            "span": {
              "end": 238,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 13
                },
                "start": {
                  "col": 1,
                  "line": 12
                }
              },
              "start": 219
            },
            "text": "How to use this"
          }
        ],
        "claim": [
          "au.engine.readme::au-engine"
        ],
        "closure": [
          "au.engine.readme::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "tldr",
            "origins": [
              {
                "name": "au.engine.readme",
                "origin_path": "<au-engine-builtin>/au.engine.readme.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 118,
                        "line_col": {
                          "end": {
                            "col": 81,
                            "line": 3
                          },
                          "start": {
                            "col": 7,
                            "line": 3
                          }
                        },
                        "start": 44
                      },
                      "file": "<root>/scenarios/repo-readme-section-missing/README.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "A demo repo whose README omits a required section. Read in order. Fork it."
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "A demo repo whose README omits a required section. Read in order. Fork it."
                }
              }
            ],
            "field": "tldr"
          }
        ],
        "file": "<root>/scenarios/repo-readme-section-missing/README.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Repo Overview",
            "optional": false,
            "path": [
              "Repo Overview"
            ],
            "present": true,
            "span": {
              "end": 140,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 124
            }
          },
          {
            "depth": 2,
            "name": "What this is",
            "optional": false,
            "path": [
              "Repo Overview",
              "What this is"
            ],
            "present": true,
            "span": {
              "end": 157,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 141
            }
          },
          {
            "depth": 2,
            "name": "How to use this",
            "optional": false,
            "path": [
              "Repo Overview",
              "How to use this"
            ],
            "present": true,
            "span": {
              "end": 238,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 13
                },
                "start": {
                  "col": 1,
                  "line": 12
                }
              },
              "start": 219
            }
          },
          {
            "depth": 2,
            "name": "How to extend this",
            "optional": false,
            "path": [
              "Repo Overview",
              "How to extend this"
            ],
            "present": false
          }
        ]
      }
    ]
  }
}
